--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-01/ts01-01.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-01/ts01-01.component.html
@@ -4,7 +4,7 @@
 
 <div class="ui attached  segment">
   <div class="ui grid center aligned">
-    <div class="ui two wide column">&nbsp;</div>
+    <div class="ui three wide column">&nbsp;</div>
     <div class="ui center aligned twelve wide  column">
       <div class="ui form center aligned  ">
 
@@ -16,7 +16,6 @@
             <input type="text">
           </div>
         </div>
-
         <div class="inline fields">
           <div class="one wide field">
             <label>
@@ -35,9 +34,7 @@
             <input type="text">
           </div>
         </div>
-
-      
-
+        
         <div class="inline fields">
           <div class="one wide field">
             <label>ที่อยู่ :</label>
@@ -108,8 +105,8 @@
         </div>
 
         <div class="inline fields">
-          <div class="two wide field">
-            <label>เรียน :</label>
+          <div class="one wide field">
+            <label>เรียน:</label>
           </div>
           <div class="five wide field">
             <input type="text" class="disabled">
