--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
@@ -26,7 +26,7 @@
                     <div class="ui calendar" id="calendar">
                         <div class="ui input left icon">
                             <i class="time icon"></i>
-                            <input type="text" name="date-raw" [attr.readonly]="null" placeholder="MM/YYYY" [attr.required]="true">
+                            <input type="text" autocomplete="off" name="date-raw" [attr.readonly]="null" placeholder="MM/YYYY" [attr.required]="true">
                         </div>
                     </div>
                     <div class="one wide field"></div>
@@ -39,9 +39,7 @@
                     <div class="one wide field">
                         <label>เดือน</label>
                     </div>
-                  
                 </div>
-
 
                 <div class="ui center aligned grid">
                     <div class="eight wide column">
