--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
@@ -22,11 +22,11 @@
                 <div class="inline fields">
                     <div class="three wide required field">
                         <label>ระยะเวลาที่ตรวจสอบ</label>
-                    </div>                 
+                    </div>
                     <div class="ui calendar" id="calendar">
                         <div class="ui input left icon">
                             <i class="time icon"></i>
-                            <input type="text" autocomplete="off" name="date-raw" [attr.readonly]="null" placeholder="MM/YYYY" [attr.required]="true">
+                            <input type="text" name="date-raw" [attr.readonly]="null" placeholder="MM/YYYY" [attr.required]="true">
                         </div>
                     </div>
                     <div class="one wide field"></div>
@@ -39,7 +39,9 @@
                     <div class="one wide field">
                         <label>เดือน</label>
                     </div>
+
                 </div>
+
 
                 <div class="ui center aligned grid">
                     <div class="eight wide column">
