--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -8,6 +8,14 @@
         ตรวจสอบภายใน
         <i class="dropdown icon"></i>
         <div class="menu">
+            <div class="ui simple dropdown item">
+                <i class="dropdown icon"></i> ประเมินความเสี่ยง
+                <div class="menu">
+                    <a class="item" [routerLink]="['/int08-1']" routerLinkActive="active">ประเมินความเสี่ยงโครงการ</a>
+                    <a class="item" [routerLink]="['/int08-2']" routerLinkActive="active">ประเมินความเสี่ยงระบบสารสนเทศ</a>
+                    <a class="item" [routerLink]="['/int08-3']" routerLinkActive="active">ประเมินความเสี่ยงภาคพื้นที่</a>
+                </div>
+            </div>
             <div class="ui dropdown item">
                 <i class="dropdown icon"></i> ตรวจสอบรายได้
                 <div class="menu">
@@ -20,11 +28,10 @@
                     <a class="item" [routerLink]="['/int01-7-1']" routerLinkActive="active" style=" color:White ">ตรวจสอบการพิมพ์ใบอนุญาตซ้ำ</a>
                 </div>
             </div>
-
             <div class="ui simple dropdown item">
                 <i class="dropdown icon"></i> ตรวจสอบพัสดุ
                 <div class="menu">
-                    <div class="ui dropdown item"  routerLinkActive="active">
+                    <div class="ui dropdown item" routerLinkActive="active">
                         <i class="dropdown icon"></i> ตรวจสอบแสตมป์
                         <div class="menu">
                             <a class="item" [routerLink]="['/int05-1']" routerLinkActive="active">ตรวจแสตมป์พื้นที่</a>
@@ -36,18 +43,7 @@
                 </div>
             </div>
             <div class="ui simple dropdown item">
-                <i class="dropdown icon"></i> ตรวจเบิกจ่าย
-                <div class="menu">
-                    <a class="item" [routerLink]="['/int06-1']" routerLinkActive="active">ตรวจค่าใช้จ่าย</a>
-                    <a class="item" [routerLink]="['/int06-2']" routerLinkActive="active">ตรวจสรุปรายการขอเบิก</a>
-                    <a class="item" [routerLink]="['/int06-3']" routerLinkActive="active">ตรวจสอบการเบิกค่าเบี้ยเลี้ยง</a>
-                    <a class="item" [routerLink]="['/int06-4']" routerLinkActive="active">ตรวจสอบการเบิกค่าตอบแทนปฏิบัติงานนอกเวลาราชการ</a>
-                    <a class="item" [routerLink]="['/int06-5']" routerLinkActive="active">ตรวจสอบการเบิกค่าตอบแทนผู้ควบคุมงาน</a>
-                    <a class="item" [routerLink]="['/int06-6']" routerLinkActive="active">ตรวจการเบิกค่าตอบแทนบุคคลหรือคณะกรรมการ</a>
-                </div>
-            </div>
-            <div class="ui simple dropdown item">
-                <i class="dropdown icon"></i> บัญชี
+                <i class="dropdown icon"></i> ตรวจสอบบัญชี
                 <div class="menu">
                     <a class="item" [routerLink]="['/int07-1']" routerLinkActive="active">นำเข้าเอกสาร</a>
                     <a class="item" [routerLink]="['/int07-2']" routerLinkActive="active">ตรวจสอบดุลบัญชียอดยกไป</a>
@@ -59,15 +55,18 @@
                 </div>
             </div>
             <div class="ui simple dropdown item">
-                <i class="dropdown icon"></i> ประเมินความเสี่ยง
+                <i class="dropdown icon"></i> ตรวจสอบเบิกจ่าย
                 <div class="menu">
-                    <a class="item" [routerLink]="['/int08-1']" routerLinkActive="active">ประเมินความเสี่ยงโครงการ</a>
-                    <a class="item" [routerLink]="['/int08-2']" routerLinkActive="active">ประเมินความเสี่ยงระบบสารสนเทศ</a>
-                    <a class="item" [routerLink]="['/int08-3']" routerLinkActive="active">ประเมินความเสี่ยงภาคพื้นที่</a>
+                    <a class="item" [routerLink]="['/int06-1']" routerLinkActive="active">ตรวจค่าใช้จ่าย</a>
+                    <a class="item" [routerLink]="['/int06-2']" routerLinkActive="active">ตรวจสรุปรายการขอเบิก</a>
+                    <a class="item" [routerLink]="['/int06-3']" routerLinkActive="active">ตรวจสอบการเบิกค่าเบี้ยเลี้ยง</a>
+                    <a class="item" [routerLink]="['/int06-4']" routerLinkActive="active">ตรวจสอบการเบิกค่าตอบแทนปฏิบัติงานนอกเวลาราชการ</a>
+                    <a class="item" [routerLink]="['/int06-5']" routerLinkActive="active">ตรวจสอบการเบิกค่าตอบแทนผู้ควบคุมงาน</a>
+                    <a class="item" [routerLink]="['/int06-6']" routerLinkActive="active">ตรวจการเบิกค่าตอบแทนบุคคลหรือคณะกรรมการ</a>
                 </div>
             </div>
-            <div class="ui simple dropdown item">           
-                <a [routerLink]="['/int01-8-1']" style="color: #000;">ค้นหากระดาษทำการ</a>              
+            <div class="ui simple dropdown item">
+                <a [routerLink]="['/int01-8-1']" style="color: #000;">ค้นหากระดาษทำการ</a>
             </div>
         </div>
     </div>
@@ -175,8 +174,7 @@
     </div>
     <div class="actions">
         <div class="ui green mini cancel inverted button">
-        <i class="remove icon"></i>
-        โอเค
+            <i class="remove icon"></i> โอเค
         </div>
     </div>
 </div>
