set limit date and add linked to datatable

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -76,12 +76,13 @@
                                     <th rowspan="2" style="text-align: center !important">ที่อยู่โรงอุตสาหกรรม/สถานบริการ</th>
                                     <th rowspan="2" style="text-align: center !important">ทุนจดทะเบียน</th>
                                     <th rowspan="2" style="text-align: center !important">สถานะ/วันที่</th>
-                                    <th colspan="12" style="text-align: center !important">การชำระภาษี 12 เดือนแรก</th>
-                                    <th colspan="12" style="text-align: center !important">การชำระภาษี 12 เดือนหลัง </th>
+                                    <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }} เดือนแรก</th>
+                                    <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }} เดือนหลัง </th>
+                                    <th rowspan="2" style="text-align: center !important">#</th>
                                 </tr>
                                 <tr>
-                                    <th style="border-left: 1px solid rgba(34,36,38,.1);">12 เดือนแรก</th>
-                                    <th style="text-align: center !important">12 เดือนหลัง </th>
+                                    <th style="border-left: 1px solid rgba(34,36,38,.1);">{{ month/2 }} เดือนแรก</th>
+                                    <th style="text-align: center !important">{{ month/2 }} เดือนหลัง </th>
                                     <th style="text-align: center !important">2558</th>
                                     <th style="text-align: center !important">2559</th>
                                     <th style="text-align: center !important">2560</th>
