--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/add-data/add-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/add-data/add-data.component.html
@@ -174,13 +174,17 @@
         </div>
 
         <div class="inline fields">
-            <div class="one wide field"></div>
+          <div class="one wide field"></div>
           <div class="six wide field">
             <p>การตรวจสอบภาษีครั้งล่าสุดเมื่อปีงบประมาณ </p>
           </div>
           <div class="four wide field">
             <input type="text">
           </div>
+        </div>
+          
+        <div class="inline fields">
+            <div class="one wide field"></div>
           <div class="three wide field">
             <p>ผลการตรวจสอบภาษี </p>
           </div>
@@ -229,10 +233,42 @@
         </div>
 
         <div class="inline fields">
-            <div class="five wide field">
-              <h4>เพิ่มข้อมูลภายนอก	</h4>
-            </div>
+          <div class="five wide field">
+            <h4>เพิ่มข้อมูลภายนอก </h4>
           </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="one wide field"></div>
+          <div class="nine wide field">
+            <label class="custom-label-w-15">เพิ่มข้อมูล</label>
+            <input type="file" />
+          </div>
+          <div class="one wide field">
+            <p>เพิ่ม</p>
+          </div>
+        </div>
+        <div class="inline fields">
+          <div class="one wide field"></div>
+          <div class="nine wide field">
+            <label class="custom-label-w-15">เพิ่มข้อมูล</label>
+            <input type="file" />
+          </div>
+          <div class="one wide field">
+            <p>เพิ่ม</p>
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="one wide field"></div>
+          <div class="nine wide field">
+            <label class="custom-label-w-15">เพิ่มข้อมูล</label>
+            <input type="file" />
+          </div>
+          <div class="one wide field">
+            <p>เพิ่ม</p>
+          </div>
+        </div>
 
 
 
