--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -3,7 +3,7 @@
         <h2 class="ui header">กระดาษทำการเปรียบเทียบการชำระภาษี {{month}} เดือนย้อนหลังของผู้ประกอบการ</h2>
 
         <div class="ui top attached header">
-            <span>ข้อมูลการวิเคราห์รายได้ของผู้ประกอบการที่มีการชำระภาษีสรรพสามิต ประเภท น้ำมัน</span>
+            <span>ข้อมูลการวิเคราห์รายได้ของผู้ประกอบการที่มีการชำระภาษีสรรพสามิต</span>
         </div>
 
         <div class="ui attached segment">
@@ -23,7 +23,7 @@
                     <div class="sixteen wide field required">
                         <label class="custom-label-w-25">ระหว่างวันที่ </label>
                         <div class="four ui action input">
-                            <input type="text" placeholder="MM/YYYY" value="{{form2}}" readonly="" class="custom-readonly">
+                            <input type="text" placeholder="MM/YYYY" value="{{form1}}" readonly="" class="custom-readonly">
                             <button class="ui icon button">
                 <i class="add to calendar icon"></i>
               </button>
@@ -32,7 +32,7 @@
                             <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ถึง&nbsp;</label>
                         </div>
                         <div class="four ui action input">
-                            <input type="text" placeholder="MM/YYYY" value="{{form1}}" class="custom-readonly" [readonly]="true">
+                            <input type="text" placeholder="MM/YYYY" value="{{form2}}" class="custom-readonly" [readonly]="true">
                             <button class="ui icon button">
                 <i class="add to calendar icon"></i>
               </button>
