backend by id, frontend excise added

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -78,7 +78,7 @@
                                     <th rowspan="2" style="text-align: center !important">สถานะ/วันที่</th>
                                     <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }} เดือนแรก</th>
                                     <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }} เดือนหลัง </th>
-                                    <th rowspan="2" style="text-align: center !important">#</th>
+                                    <th rowspan="2" style="text-align: center !important">เพิ่มข้อมูลภายนอก</th>
                                 </tr>
                                 <tr>
                                     <th style="border-left: 1px solid rgba(34,36,38,.1);">{{ month/2 }} เดือนแรก</th>
