--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/add-data/add-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/add-data/add-data.component.html
@@ -18,13 +18,13 @@
             <p>ชื่อผู้ประกอบการ : </p>
           </div>
           <div class="five wide field">
-            <input type="text">
+            <input type="text" value="{{excise.exciseOperatorName}}">
           </div>
           <div class="three wide field">
             <p>เลขทะเบียนสรรพสามิต: </p>
           </div>
           <div class="five wide field">
-            <input type="text">
+            <input type="text" value="{{excise.exciseId}}">
           </div>
         </div>
 
@@ -99,7 +99,7 @@
 
         <div class="inline fields">
           <div class="five wide field">
-            <h4>ช้อมูลการชำระภาษี</h4>
+            <h4>ข้อมูลการชำระภาษี</h4>
           </div>
         </div>
 
@@ -109,7 +109,6 @@
             <h4>การชำระภาษีย้อนหลัง 3 เดือนล่าสุด : </h4>
           </div>
         </div>
-
 
         <div class="inline fields">
           <div class="one wide field"></div>
@@ -126,7 +125,26 @@
             <input type="text">
           </div>
           <div class="one wide field">
-            <p>บาท : </p>
+            <p>บาท</p>
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="one wide field"></div>
+          <div class="two wide field">
+            <p>เดือนที่ 2: </p>
+          </div>
+          <div class="three wide field">
+            <input type="text">
+          </div>
+          <div class="two wide field">
+            <p>มูลค่าภาษี : </p>
+          </div>
+          <div class="three wide field">
+            <input type="text">
+          </div>
+          <div class="one wide field">
+            <p>บาท</p>
           </div>
         </div>
 
@@ -145,28 +163,10 @@
             <input type="text">
           </div>
           <div class="one wide field">
-            <p>บาท : </p>
+            <p>บาท</p>
           </div>
         </div>
 
-        <div class="inline fields">
-          <div class="one wide field"></div>
-          <div class="two wide field">
-            <p>เดือนที่ 3: </p>
-          </div>
-          <div class="three wide field">
-            <input type="text">
-          </div>
-          <div class="two wide field">
-            <p>มูลค่าภาษี : </p>
-          </div>
-          <div class="three wide field">
-            <input type="text">
-          </div>
-          <div class="one wide field">
-            <p>บาท : </p>
-          </div>
-        </div>
         <div class="inline fields">
           <div class="five wide field">
             <h4>ข้อมูลการตรวจสอบภาษีครั้งล่าสุด </h4>
@@ -182,7 +182,7 @@
             <input type="text">
           </div>
         </div>
-          
+
         <div class="inline fields">
             <div class="one wide field"></div>
           <div class="three wide field">
