Edited field add-data

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/add-data/add-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/add-data/add-data.component.html
@@ -53,47 +53,8 @@
           <div class="three wide field">
             <p>ที่ตั้งโรงอุตสาหกรรม :</p>
           </div>
-          <div class="three wide field">
-            <input type="text">
-          </div>
-          <div class="one wide field">
-            <p>ถนน : </p>
-          </div>
-          <div class="two wide field">
-            <input type="text">
-          </div>
-          <div class="one wide field">
-            <p>หมู่ :</p>
-          </div>
-          <div class="two wide field">
-            <input type="text">
-          </div>
-
-          <div class="two wide field">
-            <p>ตำบล/แขวง :</p>
-          </div>
-          <div class="two wide field">
-            <input type="text">
-          </div>
-        </div>
-        <div class="inline fields">
-          <div class="two wide field">
-            <p>อำเภอ/เขต : </p>
-          </div>
-          <div class="four wide field">
-            <input type="text">
-          </div>
-          <div class="one wide field">
-            <p>จังหวัด: </p>
-          </div>
-          <div class="three wide field">
-            <input type="text">
-          </div>
-          <div class="two wide field">
-            <p>รหัสไปรษณีย์ : </p>
-          </div>
-          <div class="four wide field">
-            <input type="text">
+          <div class="thirteen wide field">
+            <textarea style="width: 100%" cols="30" rows="2">{{excise.industrialAddress}}</textarea>
           </div>
         </div>
 
@@ -242,7 +203,7 @@
           <div class="one wide field"></div>
           <div class="nine wide field">
             <label class="custom-label-w-15">เพิ่มข้อมูล</label>
-            <input type="file" />
+            <input type="file" accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx" />
           </div>
           <div class="one wide field">
             <p>เพิ่ม</p>
@@ -252,7 +213,7 @@
           <div class="one wide field"></div>
           <div class="nine wide field">
             <label class="custom-label-w-15">เพิ่มข้อมูล</label>
-            <input type="file" />
+            <input type="file" accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx" />
           </div>
           <div class="one wide field">
             <p>เพิ่ม</p>
@@ -263,17 +224,12 @@
           <div class="one wide field"></div>
           <div class="nine wide field">
             <label class="custom-label-w-15">เพิ่มข้อมูล</label>
-            <input type="file" />
+            <input type="file" accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx" />
           </div>
           <div class="one wide field">
             <p>เพิ่ม</p>
           </div>
         </div>
-
-
-
-
-
 
       </div>
     </div>
