--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/add-data/add-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/add-data/add-data.component.html
@@ -1,253 +1,273 @@
-<div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-  <span>ข้อมูลทั่วไป</span>
-</div>
-
-<div class="ui attached segment">
-  <div class="ui grid">
-    <div class="ui two wide column">&nbsp;</div>
-    <div class="ui twelve wide column">
-      <div class="ui form">
-        <div class="inline fields">
-          <div class="two wide field">
-            <h4>ข้อมูลบริษัท</h4>
+<form  class="ui grid" (ngSubmit)="onUpdate($event)" ngNativeValidate>
+  <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+      <span>ข้อมูลทั่วไป</span>
+    </div>
+    
+    <div class="ui attached segment">
+      <div class="ui grid">
+        <div class="ui two wide column">&nbsp;</div>
+        <div class="ui twelve wide column">
+          <div class="ui form">
+            <div class="inline fields">
+              <div class="two wide field">
+                <h4>ข้อมูลบริษัท</h4>
+              </div>
+            </div>
+    
+            <div class="inline fields">
+              <div class="three wide field">
+                <p>ชื่อผู้ประกอบการ : </p>
+              </div>
+              <div class="five wide field">
+                <input type="text" readonly="" name="exciseOperatorName" class="custom-readonly" [(ngModel)]="excise.exciseOperatorName">
+              </div>
+              <div class="three wide field">
+                <p>เลขทะเบียนสรรพสามิต: </p>
+              </div>
+              <div class="five wide field">
+                <input type="text" readonly="" name="exciseId" class="custom-readonly" [(ngModel)]="excise.exciseId">
+              </div>
+            </div>
+    
+            <div class="inline fields">
+              <div class="three wide field">
+                <p>ชื่อโรงอุตสาหกรรม :</p>
+              </div>
+              <div class="five wide field">
+                <input type="text" [(ngModel)]="excise.exciseFacName" name="exciseFacName" required>
+              </div>
+              <div class="two wide field">
+                <p>พื้นที่ / ภาค : </p>
+              </div>
+              <div class="two wide field">
+                <input type="text" [(ngModel)]="excise.taexciseSectorArea" name="taexciseSectorArea" required>
+              </div>
+              <div class="two wide field">
+                <p>พิกัดสินค้า :</p>
+              </div>
+              <div class="two wide field">
+                <input type="text" [(ngModel)]="excise.taexciseProductType" name="taexciseProductType" required>
+              </div>
+            </div>
+    
+            <div class="inline fields">
+              <div class="three wide field">
+                <p>ที่ตั้งโรงอุตสาหกรรม :</p>
+              </div>
+              <div class="thirteen wide field">
+                <textarea style="width: 100%" cols="30" rows="2" [(ngModel)]="excise.industrialAddress" name="industrialAddress" required></textarea>
+              </div>
+            </div>
+    
+            <div class="inline fields">
+              <div class="five wide field">
+                <h4>ข้อมูลการชำระภาษี</h4>
+              </div>
+            </div>
+    
+            <div class="inline fields">
+              <div class="one wide field"></div>
+              <div class="five wide field">
+                <h4>การชำระภาษีย้อนหลัง 3 เดือนล่าสุด : </h4>
+              </div>
+            </div>
+    
+            <div class="inline fields">
+              <div class="one wide field"></div>
+              <div class="two wide field">
+                <p>เดือนที่ 1: </p>
+              </div>
+              <div class="three wide field">
+                <input type="text" name="exciseTaxReceiveMonth_1" [(ngModel)]="excise.exciseTax[0].exciseTaxReceiveMonth" required>
+              </div>
+              <div class="two wide field">
+                <p>มูลค่าภาษี : </p>
+              </div>
+              <div class="three wide field">
+                <input type="text" name="exciseTaxReceiveAmount_1" [(ngModel)]="excise.exciseTax[0].exciseTaxReceiveAmount" required>
+              </div>
+              <div class="one wide field">
+                <p>บาท</p>
+              </div>
+            </div>
+    
+            <div class="inline fields">
+              <div class="one wide field"></div>
+              <div class="two wide field">
+                <p>เดือนที่ 2: </p>
+              </div>
+              <div class="three wide field">
+                <input type="text" name="exciseTaxReceiveMonth_2" [(ngModel)]="excise.exciseTax[1].exciseTaxReceiveMonth" required>
+              </div>
+              <div class="two wide field">
+                <p>มูลค่าภาษี : </p>
+              </div>
+              <div class="three wide field">
+                <input type="text" name="exciseTaxReceiveAmount_2" [(ngModel)]="excise.exciseTax[1].exciseTaxReceiveAmount" required>
+              </div>
+              <div class="one wide field">
+                <p>บาท</p>
+              </div>
+            </div>
+    
+            <div class="inline fields">
+              <div class="one wide field"></div>
+              <div class="two wide field">
+                <p>เดือนที่ 3: </p>
+              </div>
+              <div class="three wide field">
+                <input type="text" name="exciseTaxReceiveMonth_3" [(ngModel)]="excise.exciseTax[2].exciseTaxReceiveMonth" required>
+              </div>
+              <div class="two wide field">
+                <p>มูลค่าภาษี : </p>
+              </div>
+              <div class="three wide field">
+                <input type="text" name="exciseTaxReceiveAmount_3" [(ngModel)]="excise.exciseTax[2].exciseTaxReceiveAmount" required>
+              </div>
+              <div class="one wide field">
+                <p>บาท</p>
+              </div>
+            </div>
+    
+            <div class="inline fields">
+              <div class="five wide field">
+                <h4>ข้อมูลการตรวจสอบภาษีครั้งล่าสุด </h4>
+              </div>
+            </div>
+    
+            <div class="inline fields">
+              <div class="one wide field"></div>
+              <div class="six wide field">
+                <p>การตรวจสอบภาษีครั้งล่าสุดเมื่อปีงบประมาณ </p>
+              </div>
+              <div class="four wide field">
+                <input type="text">
+              </div>
+            </div>
+    
+            <div class="inline fields">
+                <div class="one wide field"></div>
+              <div class="three wide field">
+                <p>ผลการตรวจสอบภาษี </p>
+              </div>
+              <div class="four wide field">
+                <input type="text">
+              </div>
+            </div>
+    
+            <div class="inline fields">
+              <div class="one wide field"></div>
+              <div class="three wide field">
+                <p>ปริมาณภาษีที่ต้องชำระ : </p>
+              </div>
+              <div class="four wide field">
+                <input type="text">
+              </div>
+              <div class="three wide field">
+                <p>บาท</p>
+              </div>
+            </div>
+    
+            <div class="inline fields">
+              <div class="one wide field"></div>
+              <div class="three wide field">
+                <p>ปริมาณเบี้ยปรับ : </p>
+              </div>
+              <div class="four wide field">
+                <input type="text">
+              </div>
+              <div class="three wide field">
+                <p>บาท</p>
+              </div>
+            </div>
+    
+            <div class="inline fields">
+              <div class="one wide field"></div>
+              <div class="three wide field">
+                <p> ปริมาณเงินเพิ่ม : </p>
+              </div>
+              <div class="four wide field">
+                <input type="text">
+              </div>
+              <div class="three wide field">
+                <p>บาท</p>
+              </div>
+            </div>
+    
+            <div class="inline fields">
+              <div class="five wide field">
+                <h4>เพิ่มข้อมูลภายนอก </h4>
+              </div>
+            </div>
+    
+            <div class="inline fields">
+              <div class="one wide field"></div>
+              <div class="nine wide field">
+                <label class="custom-label-w-15">เพิ่มข้อมูล</label>
+                <input type="file" (change)="readUrl($event)"
+                accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx" />
+              </div>
+              <div class="one wide field">
+                <p>เพิ่ม</p>
+              </div>
+            </div>
+            <div class="inline fields">
+              <div class="one wide field"></div>
+              <div class="nine wide field">
+                <label class="custom-label-w-15">เพิ่มข้อมูล</label>
+                <input type="file" (change)="readUrl($event)"
+                accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx" />
+              </div>
+              <div class="one wide field">
+                <p>เพิ่ม</p>
+              </div>
+            </div>
+            <div class="inline fields">
+              <div class="one wide field"></div>
+              <div class="nine wide field">
+                <label class="custom-label-w-15">เพิ่มข้อมูล</label>
+                <input type="file" (change)="readUrl($event)"
+                accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx" />
+              </div>
+              <div class="one wide field">
+                <p>เพิ่ม</p>
+              </div>
+            </div>
+    
+            <!-- <div class="inline fields">
+              <div class="one wide field"></div>
+              <div class="nine wide field" style="cursor: pointer">
+                <label class="custom-label-w-15">เพิ่มข้อมูล</label>
+                <div class="frame-file">
+                  <p>กรุณาเลือกไฟล์</p>
+                  <input
+                    type="file" class="file" (change)="readUrl($event)"
+                    accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx" />
+                </div>
+              </div>
+              <div class="one wide field">
+                <p>เพิ่ม</p>
+              </div>
+            </div> -->
+    
           </div>
         </div>
-
-        <div class="inline fields">
-          <div class="three wide field">
-            <p>ชื่อผู้ประกอบการ : </p>
-          </div>
-          <div class="five wide field">
-            <input type="text" readonly="" class="custom-readonly" value="{{excise.exciseOperatorName}}">
-          </div>
-          <div class="three wide field">
-            <p>เลขทะเบียนสรรพสามิต: </p>
-          </div>
-          <div class="five wide field">
-            <input type="text" readonly="" class="custom-readonly" value="{{excise.exciseId}}">
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="three wide field">
-            <p>ชื่อโรงอุตสาหกรรม :</p>
-          </div>
-          <div class="five wide field">
-            <input type="text" value="{{excise.exciseFacName}}">
-          </div>
-          <div class="two wide field">
-            <p>พื้นที่ / ภาค : </p>
-          </div>
-          <div class="two wide field">
-            <input type="text" value="{{excise.taexciseSectorArea}}">
-          </div>
-          <div class="two wide field">
-            <p>พิกัดสินค้า :</p>
-          </div>
-          <div class="two wide field">
-            <input type="text" value="{{excise.taexciseProductType}}">
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="three wide field">
-            <p>ที่ตั้งโรงอุตสาหกรรม :</p>
-          </div>
-          <div class="thirteen wide field">
-            <textarea style="width: 100%" cols="30" rows="2">{{excise.industrialAddress}}</textarea>
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="five wide field">
-            <h4>ข้อมูลการชำระภาษี</h4>
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="one wide field"></div>
-          <div class="five wide field">
-            <h4>การชำระภาษีย้อนหลัง 3 เดือนล่าสุด : </h4>
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="one wide field"></div>
-          <div class="two wide field">
-            <p>เดือนที่ 1: </p>
-          </div>
-          <div class="three wide field">
-            <input type="text" value="{{excise.exciseTax[0].exciseTaxReceiveMonth}}">
-          </div>
-          <div class="two wide field">
-            <p>มูลค่าภาษี : </p>
-          </div>
-          <div class="three wide field">
-            <input type="text" value="{{excise.exciseTax[0].exciseTaxReceiveAmount}}">
-          </div>
-          <div class="one wide field">
-            <p>บาท</p>
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="one wide field"></div>
-          <div class="two wide field">
-            <p>เดือนที่ 2: </p>
-          </div>
-          <div class="three wide field">
-            <input type="text" value="{{excise.exciseTax[1].exciseTaxReceiveMonth}}">
-          </div>
-          <div class="two wide field">
-            <p>มูลค่าภาษี : </p>
-          </div>
-          <div class="three wide field">
-            <input type="text" value="{{excise.exciseTax[1].exciseTaxReceiveAmount}}">
-          </div>
-          <div class="one wide field">
-            <p>บาท</p>
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="one wide field"></div>
-          <div class="two wide field">
-            <p>เดือนที่ 3: </p>
-          </div>
-          <div class="three wide field">
-            <input type="text" value="{{excise.exciseTax[2].exciseTaxReceiveMonth}}">
-          </div>
-          <div class="two wide field">
-            <p>มูลค่าภาษี : </p>
-          </div>
-          <div class="three wide field">
-            <input type="text" value="{{excise.exciseTax[2].exciseTaxReceiveAmount}}">
-          </div>
-          <div class="one wide field">
-            <p>บาท</p>
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="five wide field">
-            <h4>ข้อมูลการตรวจสอบภาษีครั้งล่าสุด </h4>
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="one wide field"></div>
-          <div class="six wide field">
-            <p>การตรวจสอบภาษีครั้งล่าสุดเมื่อปีงบประมาณ </p>
-          </div>
-          <div class="four wide field">
-            <input type="text">
-          </div>
-        </div>
-
-        <div class="inline fields">
-            <div class="one wide field"></div>
-          <div class="three wide field">
-            <p>ผลการตรวจสอบภาษี </p>
-          </div>
-          <div class="four wide field">
-            <input type="text">
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="one wide field"></div>
-          <div class="three wide field">
-            <p>ปริมาณภาษีที่ต้องชำระ : </p>
-          </div>
-          <div class="four wide field">
-            <input type="text">
-          </div>
-          <div class="three wide field">
-            <p>บาท</p>
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="one wide field"></div>
-          <div class="three wide field">
-            <p>ปริมาณเบี้ยปรับ : </p>
-          </div>
-          <div class="four wide field">
-            <input type="text">
-          </div>
-          <div class="three wide field">
-            <p>บาท</p>
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="one wide field"></div>
-          <div class="three wide field">
-            <p> ปริมาณเงินเพิ่ม : </p>
-          </div>
-          <div class="four wide field">
-            <input type="text">
-          </div>
-          <div class="three wide field">
-            <p>บาท</p>
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="five wide field">
-            <h4>เพิ่มข้อมูลภายนอก </h4>
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="one wide field"></div>
-          <div class="nine wide field">
-            <label class="custom-label-w-15">เพิ่มข้อมูล</label>
-            <input type="file" accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx" />
-          </div>
-          <div class="one wide field">
-            <p>เพิ่ม</p>
-          </div>
-        </div>
-        <div class="inline fields">
-          <div class="one wide field"></div>
-          <div class="nine wide field">
-            <label class="custom-label-w-15">เพิ่มข้อมูล</label>
-            <input type="file" accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx" />
-          </div>
-          <div class="one wide field">
-            <p>เพิ่ม</p>
-          </div>
-        </div>
-
-        <div class="inline fields">
-          <div class="one wide field"></div>
-          <div class="nine wide field">
-            <label class="custom-label-w-15">เพิ่มข้อมูล</label>
-            <input type="file" accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel,.doc,.docx" />
-          </div>
-          <div class="one wide field">
-            <p>เพิ่ม</p>
-          </div>
-        </div>
-
+        <div class="ui one wide column">&nbsp;</div>
       </div>
     </div>
-    <div class="ui one wide column">&nbsp;</div>
-  </div>
-</div>
-
-<div class="ui bottom centered attached segment">
-  <div class="ui center aligned grid">
-    <div class="eight wide column">
-      <button class="ui mini green button" type="button">
-        <i class="save icon"></i>
-        ตกลง
-      </button>
-      <button class="ui mini red button" type="button" (click)="onDiscard()">
-        <i class="times icon"></i>
-        ยกเลิก
-      </button>
+    
+    <div class="ui bottom centered attached segment">
+      <div class="ui center aligned grid">
+        <div class="eight wide column">
+          <button class="ui mini green button" type="submit">
+            <i class="save icon"></i>
+            ตกลง
+          </button>
+          <button class="ui mini red button" type="button" (click)="onCancel()">
+            <i class="times icon"></i>
+            ยกเลิก
+          </button>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
+</form>
